<resources>
    <string name="app_name">PersonalPlanner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tilUserName">Nombre del usuario</string>
    <string name="tilPassword">Contraseña</string>
    <string name="btnLogin">INICIAR SESIÓN</string>
    <string name="tilEmail">Correo electrónico</string>
    <string name="tilConfirmPassword">Confirmar contraseña</string>
    <string name="fabAddUser">Añadir un usuario nuevo</string>
    <string name="tvCrearUsuario">Crear usuario</string>
    <string name="tilCreateUserName">Nombre del nuevo usuario</string>
    <string name="tilCreateUserSurname">Apellidos del nuevo usuario</string>
    <string name="tilCreateUserRol">Rol del nuevo usuario</string>
    <string name="tilCreateUserBirthdayDate">Fecha de cumpleaños del nuevo usuario</string>
    <string name="tilCreateUserColor">Color del nuevo usuario</string>
    <string name="tilCreateUserImage">Imagen del nuevo usuario</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="aboutUs">About Us</string>
    <string name="tvEditarUsuario">Editar usuario</string>
    <string name="tvCrearComida">Crear comida</string>
    <string name="spinnerPeopleList">Spinner de Usuarios</string>
    <string name="tvTitle">MENU</string>
    <string name="tvToDoList">LISTA DE TAREAS</string>
    <string name="tvCalendar">CALENDARIO</string>
    <string name="tvWhislist">WHISLIST</string>
    <string name="tvShoppingList">LISTA DE LA COMPRA</string>
    <string name="tvBills">GASTOS</string>
    <string name="tvFood">COMIDA</string>
    <string name="tvRegister">Registro</string>
    <string name="tvCreatePeople">Crear persona</string>
    <string name="tilCreatePeopleName">Nombre de la nueva persona</string>
    <string name="tilCreatePeopleSurname">Apellidos de la nueva persona</string>
    <string name="tilCreatePeopleRol">Rol de la nueva persona</string>
    <string name="tvEditPeople">Editar persona</string>
    <string name="tilEditPeopleName">Nombre de la persona a editar</string>
    <string name="tilEditPeopleSurname">Apellidos de la persona a editar</string>
    <string name="tilEditPeopleRol">Rol de la persona a editar</string>
    <string name="btnEditPeople">EDITAR PERSONA</string>
    <string name="fabAddFood">Fab añadir comida</string>
    <string name="btnCreateFood">AÑADIR COMIDA</string>
    <string name="tilCreateFoodName">Nombre de la nueva comida</string>
    <string name="tilCreateFoodDescription">Descripción de la nueva comida</string>
    <string name="btnAddPeople">AÑADIR PERSONA</string>
    <string name="errorEmailFormat">Formato incorrecto del correo electrónico</string>
    <string name="errorPasswordEmpty">Contraseña debe contener un valor</string>
    <string name="errorPassworFormat">Formato incorrecto de la contraseña</string>
    <string name="aboutUsName">María Molina Lorenzo</string>
    <string name="aboutUsSubtitle">Personal planner</string>
    <string name="aboutUsBrief">Aplicación sobre un  organizador personal, que incluye: lista de tareas, calendario, whislist, lista de la compra, gastos y comida.</string>
    <string name="errorConfirmPasswordEmpty">Confirmar contraseña debe contener un valor</string>
    <string name="errorConfirmPasswordFormat">Formato incorrecto de confirmar contraseña</string>
    <string name="errorConfirmPasswordNotEquals">Las contraseñas no coinciden</string>
    <string name="errorNameEmpty">Nombre debe contener un valor</string>
    <string name="errorEmailEmpty">Correo electrónico debe contener un valor</string>
    <string name="ToastChosenPeople">Se ha seleccionado  la persona </string>
    <string name="errorDescriptionEmpty">" Descripción debe contener un valor"</string>
</resources>