<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.EditPeopleFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ramadhan"
        android:text="@string/tvEditPeople"
        android:textAlignment="center"
        android:textColor="@color/color_primary_variant"
        android:textSize="80sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEditPeopleName"
        style="@style/TextInputLayoutStyleVariantNoCorner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tilEditPeopleName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEditPeopleSurname"
        style="@style/TextInputLayoutStyleVariantNoCorner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tilEditPeopleSurname"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEditPeopleRol"
        style="@style/TextInputLayoutStyleVariantNoCorner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tilEditPeopleRol"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilEditPeoplerBirthdayDate"
    style="@style/TextInputLayoutStyleCreateUser"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toStartOf="@+id/glEnd"
    app:layout_constraintStart_toStartOf="@+id/glStart"
    app:layout_constraintTop_toBottomOf="@+id/tilEditPeopleRol">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tilEditPeopleBirthdayDate"
        android:focusable="false"
        android:clickable="true"
        android:text="@={people.birthdayDate}"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilEditPeopleColor"
    style="@style/TextInputLayoutStyleCreateUser"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toStartOf="@+id/glEnd"
    app:layout_constraintStart_toStartOf="@+id/glStart"
    app:layout_constraintTop_toBottomOf="@+id/tilEditPeopleBirthdayDate">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tilEditPeopleColor" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilEditPeopleImage"
    style="@style/TextInputLayoutStyleCreateUser"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toStartOf="@+id/glEnd"
    app:layout_constraintStart_toStartOf="@+id/glStart"
    app:layout_constraintTop_toBottomOf="@+id/tilEditPeopleColor">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tilEditPeopleImage" />
</com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:id="@+id/btnEditPeople"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:background="@drawable/shape"
        android:layout_marginTop="@dimen/btnEditPeople"
        android:text="@string/btnEditPeople" />


</LinearLayout>