<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <!--<variable
            name="food"
            type="com.example.personalplanner.data.model.Food" />-->
        <variable
            name="viewmodel"
            type="com.example.personalplanner.view_model.FoodViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/create_food_fragment_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/create_food_fragment_guideline" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ramadhan"
            android:text="@string/tvCrearComida"
            android:textAlignment="center"
            android:textColor="@color/color_border_shadow"
            android:textSize="@dimen/create_food_fragment_text_view_title_text_size"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreateFoodName"
            style="@style/TextInputLayoutStyleCreateUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilCreateFoodName"
                android:text="@={viewmodel.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreateFoodDescription"
            style="@style/TextInputLayoutStyleCreateUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tilCreateFoodName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilCreateFoodDescription"
                android:text="@={viewmodel.description}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCreateFood"
            android:layout_width="@dimen/create_food_fragment_button_create_food_width"
            android:layout_height="@dimen/create_food_fragment_button_create_food_height"
            android:layout_gravity="center"
            android:background="@drawable/shape_button_create_people"
            android:text="@string/btnCreateFood"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilCreateFoodDescription"
            android:onClick="@{() -> viewmodel.validateCredentials()}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>