<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="people"
            type="com.example.personalplanner.data.model.People" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/create_people_fragment_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/create_people_fragment_guideline" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ramadhan"
            android:text="@string/tvCreatePeople"
            android:textAlignment="center"
            android:textColor="@color/color_border_shadow"
            android:textSize="@dimen/create_people_fragment_text_view_title_text_size"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreatePeopleName"
            style="@style/TextInputLayoutStyleCreateUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilCreatePeopleName"
                android:text="@={people.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreatePeopleSurname"
            style="@style/TextInputLayoutStyleCreateUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tilCreatePeopleName"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilCreatePeopleSurname"
                android:text="@={people.surname}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreatePeopleRol"
            style="@style/TextInputLayoutStyleCreateUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tilCreatePeopleSurname">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilCreatePeopleRol"
                android:text="@={people.rol}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--<com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreatePeopleBirthdayDate"
            style="@style/TextInputLayoutStyleCreateUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tilCreatePeopleRol">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilCreatePeopleBirthdayDate"
                android:focusable="false"
                android:clickable="true"
                android:text="@={people.birthdayDate}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreatePeopleColor"
            style="@style/TextInputLayoutStyleCreateUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tilCreatePeopleBirthdayDate">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilCreatePeopleColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreatePeopleImage"
            style="@style/TextInputLayoutStyleCreateUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tilCreatePeopleColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilCreatePeopleImage" />
        </com.google.android.material.textfield.TextInputLayout>-->

        <Button
            android:id="@+id/btnCreatePeople"
            android:layout_width="@dimen/button_create_people_width"
            android:layout_height="@dimen/button_create_people_height"
            android:layout_gravity="center"
            android:background="@drawable/shape_button_create_people"
            android:text="CREAR"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilCreatePeopleRol" />
        />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>